# molecular-modeling

./: .gitignore  CMakeLists.txt  README.md  generator.cpp  main.cpp  report.ipynb
Gas/: CMakeLists.txt  gas.h
Gas/include/: MF.h  model.h  parser.h  particle.h
Gas/src/: model.cpp  parser.cpp  particle.cpp
